Added second version spring-security